Update unitest and clean code